Fix tag spacing in journal editor's note [WEB-1963]

--- a/frontend/scss/organisms/_o-editors-note.scss
+++ b/frontend/scss/organisms/_o-editors-note.scss
@@ -21,6 +21,7 @@
   }
 
   .o-editors-note__tag {
+    margin-left: 1px;
     margin-bottom: 9px;
 
     @include breakpoint('small+') {
